remove legacy authentication implementation, refactor security configuration, and streamline OAuth2 user service integration